# korvenix-timewaster

./: .coverage  Dockerfile  cloudbuild.yaml
app/: auth.py  cost_engine.py  dependencies.py  firestore_client.py  main.py  models.py  settings.py
app/routes/: config.py  join_events.py  meetings.py  reports.py
backend/: pyproject.toml
backend/app/: google_apis.py  main.py
backend/app/routes/: sync.py
backend/tests/: conftest.py
backend/tests/load/: k6-load-test.js
tests/: test_auth.py  test_cost_engine.py  test_endpoints.py  test_security_headers.py
