[project]
name = "timewaster-backend"
version = "0.1.0"
description = "Time Waster Plugin — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "google-cloud-firestore>=2.16,<3",
    "google-cloud-secret-manager>=2.20,<3",
    "google-api-python-client>=2.130,<3",
    "google-auth>=2.29,<3",
    "cachetools>=5.3,<6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
